--- a/BD Avancees et applications web/Labo8Novembre/WPFClient/WPFClient.csproj
+++ b/BD Avancees et applications web/Labo8Novembre/WPFClient/WPFClient.csproj
@@ -34,6 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="GalaSoft.MvvmLight, Version=5.3.0.19026, Culture=neutral, PublicKeyToken=e7570ab207bcb616, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\net45\GalaSoft.MvvmLight.dll</HintPath>
     </Reference>
@@ -102,6 +108,7 @@
     <Compile Include="Model\UpdateException.cs" />
     <Compile Include="Services\APIDataService.cs" />
     <Compile Include="Services\APIDataServiceWrapperWithFakeLatency.cs" />
+    <Compile Include="Services\DatabaseDataService.cs" />
     <Compile Include="Services\IDataservice.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
@@ -148,6 +155,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\RefreshIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EFDataAccess\EFDataAccess.csproj">
+      <Project>{f516aaa1-db5a-4eed-9f7e-982f8a566ca9}</Project>
+      <Name>EFDataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
