--- a/BD Avancees et applications web/Labo8Novembre/WPFClient/packages.config
+++ b/BD Avancees et applications web/Labo8Novembre/WPFClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
